@startuml

package Game-Scene [[../../TestCases/HasDependency/Game.tscn]] {
    class Game  {
        [[../../Game/Game.cs ScriptFile]]
        [Provisions]
        [[../../Game/Game.cs:15 IGameRepo]] - [[../../TestCases/HasDependency/Domain/GameRepo.cs Script]]
        --
        [Nodes]
        World - [[../../World/World.cs Script]]
        [Properties]
        [[../../Game/Game.cs:23 AppBinding]]
        [[../../Game/Game.cs:22 GameLogic]] - [[../../TestCases/HasDependency/Logic/GameLogic.cs Script]]
        [[../../Game/Game.cs:21 GameRepo]] - [[../../TestCases/HasDependency/Domain/GameRepo.cs Script]]
        --
        [Methods]
        [[../../Game/Game.cs:29 _Notification()]]
        [[../../Game/Game.cs:47 OnExitTree()]]
        [[../../Game/Game.cs:40 OnResolved()]]
        [[../../Game/Game.cs:31 Setup()]]
    }
    class World  {
        [[../../World/World.cs ScriptFile]]
        [Dependencies]
        [[../../World/World.cs:19 GameRepo]] - [[../../TestCases/HasDependency/Domain/GameRepo.cs Script]]
    }
    class GameLogic  {
        [[../../TestCases/HasDependency/Logic/GameLogic.cs ScriptFile]]
        [Methods]
        [[../../TestCases/HasDependency/Logic/GameLogic.cs:12 GetInitialState()]]
    }
    class GameRepo  {
        [[../../TestCases/HasDependency/Domain/GameRepo.cs ScriptFile]]
        [Interface Properties]
        [[../../TestCases/HasDependency/Domain/GameRepo.cs:15 Instantiator]]
        --
        [Interface Methods]
        [[../../TestCases/HasDependency/Domain/GameRepo.cs:17 CreateInstantiator()]]
        [Methods]
        [[../../TestCases/HasDependency/Domain/GameRepo.cs:24 Dispose()]]
    }
    Game::World ---> World
    Game::GameLogic ---> GameLogic
    Game::GameRepo ---> GameRepo
}

@enduml